--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Inter:wght@300;400;500&family=Jockey+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Alegreya+Sans+SC:wght@300;400;500&family=Inter:wght@300;400;500&family=Jockey+One&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Alegreya+Sans+SC:wght@300;400;500&family=Inter:wght@300;400;500&family=Jockey+One&family=Open+Sans:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Alegreya+Sans+SC:wght@300;400;500&family=Fira+Sans:wght@300;400;500;600;700;800&family=Inter:wght@300;400;500&family=Jockey+One&family=Open+Sans:wght@500;600&display=swap');
 :root{
     margin: 0px;
     padding: 0px;
