--- a/src/pages/Monitoring/Monitoring.module.css
+++ b/src/pages/Monitoring/Monitoring.module.css
@@ -97,3 +97,9 @@
     font-weight: 500;
     margin-bottom: 3px;
 }
+
+@media (max-width: 797px){
+    .tenderItemCenter{
+        flex-direction: column;
+    }
+}
